[package]
name = "star"
version = "0.6.0-SNAPSHOT"
description = "Test program for network policies"
repository = "https://github.com/mesosphere/star.git"
readme = "README.md"
license = "Apache-2.0"
authors = [
  "Connor Doyle <connor@mesosphere.io>",
]

[dependencies]
docopt = "0.6.86"
hyper = "0.6.16"
log = "0.3.9"
jsonway = "0.3.5"
rustc-serialize = "0.3.24"
threadpool = "0.1.4"
time = "0.1.43"
mio = "0.5.1"
